--- a/example/index.html
+++ b/example/index.html
@@ -5,6 +5,7 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script type="text/javascript" src="paralax/paralax.js"></script>
 		<link ref="stylesheet" type="text/css" src="style.css"></link>
+		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 		<title>Paralax.js Demo</title>
 	</head>
 	<body>
