remove jquery from scripts

--- a/example/index.html
+++ b/example/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script type="text/javascript" src="paralax/paralax.js"></script>
+		<script type="text/javascript" src="paralax.js"></script>
+		<script type="text/javascript" src="script.js"></script>
 		<link ref="stylesheet" type="text/css" src="style.css"></link>
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 		<title>Paralax.js Demo</title>
@@ -19,7 +19,5 @@
 					Your browser does not support the canvas element.
 			</canvas>
 		</div>
-
-		<button onclick="goFullScreen();" id="button">Go Fullscreen</button>
 	</body>
 </html>
