--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<script type="text/javascript" src="paralax.js"></script>
 		<script type="text/javascript" src="script.js"></script>
-		<link ref="stylesheet" type="text/css" src="style.css"></link>
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 		<title>Paralax.js Demo</title>
 	</head>
