bring back button

--- a/example/index.html
+++ b/example/index.html
@@ -19,5 +19,6 @@
 					Your browser does not support the canvas element.
 			</canvas>
 		</div>
+		<button id="button" onClick="goFullScreen();">Start the Demo</button>
 	</body>
 </html>
